# mldevops

./: .gitignore  LICENSE  README.md  heroku.yml
.github/workflows/: ci.yml  heroku-container-webapp.yml
starter/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.Docker.md  compose.yaml  conda.yaml  conda_env.yaml  invok_api.py  invoke_api.py  live_api.py  live_api_post.py  main.py  model_card.md  pyproject.toml  requirements.txt  sanitycheck.py
starter/model/: encoder.pkl  lb.pkl  model.pkl  scaler.pkl
starter/starter/: compute_metrics_on_slices_data.py  slices_output_metrics.csv  train_model.py
starter/starter/ml/: data.py  model.py
starter/starter/tests/: test_api.py  test_model.py
