[project]
name = "starter"
version = "1.0.0"
requires-python=">=3.10,<3.12"
readme = "README.md"
license = "MIT"
description="AI ML pipeline with FastAPI"
keywords = ["scikit-learn", "ml", "python", "pipeline", "fastapi"]
authors=[{name="Achille Mbogol Touye Junior", email="touyejunior@gmail.com"}]
dependencies = [
     "requests",
     "uvicorn",
     "gunicorn",
     "pytest",
     "httpx",
     "fastapi",
     "pre-commit",
     "black",
     "flake8",
     "pydantic",
     "fastapi[standard]",
     "mlflow==2.21.1",
     "numpy==1.26.4",
     "pandas==2.2.3",
     "dvc==3.59.1",
     "scikit-learn==1.6.1"
]

[tool.setuptools.packages.find]
where = ["starter"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["starter/tests"]


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"
