[project]
name = "starter"
version = "1.0.0"
requires-python=">=3.9,<3.13"
readme = "README.md"
license = "MIT"
description="AI ML pipeline with FastAPI"
keywords = ["scikit-learn", "ml", "python", "pipeline", "fastapi"]
authors=[{name="Achille Mbogol Touye Junior", email="touyejunior@gmail.com"}]
dependencies = [
     "requests",
     "uvicorn",
     "gunicorn",
     "pytest",
     "httpx",
     "poetry",
     "fastapi",
     "pre-commit",
     "black",
     "flake8",
     "pydantic",
     "fastapi[standard]",
     "mlflow==2.21.1",
     "numpy==1.26.4",
     "pandas==2.2.3",
     "dvc==3.59.1",
     "scikit-learn==1.6.1"
]

#[tool.setuptools.packages.find]
#where = ["starter"]
#exclude = ["tests*"]

[tool.poetry]
packages = [
    {include = "starter"},
]
exclude= ["starter/tests/*.py", "starter/model/*.pkl"]

[tool.pytest.ini_options]
pythonpath = ["starter"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ["setuptools>=77.0.3"]
#build-backend = "setuptools.build_meta"
